<resources>
    <string name="app_name">Gnimble</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="document_body">It was a dark and stormy night…</string>
    <string name="insert_image">Insert Image</string>
    <string name="align_right">Align Right</string>
    <string name="align_center">Align Center</string>
    <string name="align_left">Align Left</string>
    <string name="font_family">Font Family</string>
    <string name="heading_style">Heading Style</string>
    <string name="back_button_description">Return</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="open">Open</string>
    <string name="add_new_book">Create New Story</string>
    <string name="story_title">Story Title</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="no_books_yet">No Books Yet</string>
    <string name="book_title">Book Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="share_book">Network Share</string>
    <string name="menu_options">Options</string>
    <string name="open_settings">Open Settings</string>
    <string name="stop_sharing">Stop Sharing</string>
    <string name="qr_code_for_sharing">QR Code for Sharing</string>
    <string name="starting_server">Starting server…</string>
    <string name="share_your_book">Share Your Story</string>
    <string name="create_new_story">Create New Story</string>
    <string name="align_full">Align Full</string>
    <string name="find_replace">Find and Replace</string>
    <string name="statistics">Statistics</string>
    <string name="find_text">Find Text</string>
    <string name="replace_with">Replace With</string>
    <string name="open_upload">Upload Files</string>
    <string name="action_upload">Upload Files</string>
    <string name="stop_upload_server">Stop Upload Server</string>
    <string name="qr_code_for_upload">QR Code for Upload</string>
    <string name="starting_upload_server">Start Upload Server</string>
    <string name="receive_files">Receive Files</string>
    <string name="underline">Underline</string>
    <string name="open_update">Update Gnimble app</string>
    <string name="action_update">Update Gnimble</string>
    <string name="gnimble_typewriter_version">Software Version 1.1 ©2025</string>
    <string name="gnimble_typewriter_subtext">Made with 💙 by Cinemint</string>
    <string name="gnimble_typewriter_subsubtext">Artwork of Lori by Lomtek</string>
    <string name="close">Close</string>
</resources>