<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/about_image"
            android:layout_width="480dp"
            android:layout_height="480dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name"
            tools:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gnimble_typewriter_version"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="?attr/colorOnSurface"
            android:gravity="center" />

        <TextView
            android:id="@+id/about_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gnimble_typewriter_subtext"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="?attr/colorOnSurface"
            android:gravity="center" />

        <TextView
            android:id="@+id/about_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gnimble_typewriter_subsubtext"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="?attr/colorOnSurface"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/close" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>